cnd.modelimpl/test/unit/data/goldenfiles/org/netbeans/modules/cnd/modelimpl/trace/FileModelTest/ppExpressionAndEmptyBodyMacro.cc.clank.err
${origin}/ppExpressionAndEmptyBodyMacro.cc:4:9: error: invalid token at start of a preprocessor expression
#if !(A || B || C)
        ^
